<resources>
    <string name="app_name">QuanLyQuanCafe</string>
    <string name="password">Password</string>
    <string name="user_name">Username</string>
    <string name="login">Login</string>
    <string name="btnback">back</string>
    <string name="area">KHU VỰC</string>
    <string name="select_area">Select</string>
    <string name="table">TABLE</string>
    <string name="category">DANH MỤC</string>
    <string name="trove">Trở Về</string>
    <string name="ordered">DANH SÁCH ĐÃ CHỌN</string>
    <string name="more">+</string>
    <string name="less">-</string>
    <string name="order">order</string>
    <string name="check">Tính Tiền</string>
    <string name="coffee">Coffee</string>
    <string name="admin">admin</string>
    <string name="kitchen">Bếp</string>
    <string name="waiter">Đặt món</string>
    <string name="done_order">Done order</string>
    <string-array name="spinner_default">
        <item name="value1">Gía trị 1</item>
        <item name="value2">Gía trị 2</item>
        <item name="value3">Gía trị 3</item>
        <item name="value4">Gía trị 4</item>
    </string-array>

    >>>>>>> feature-1.0/CuoiKy-CRUD-Product
</resources>
