<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
<FrameLayout
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/btnDatMon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/waiter"/>
        <Button
            android:id="@+id/btnBep"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/kitchen"/>
        <Button
            android:id="@+id/btnAdmin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/admin"/>
    </LinearLayout>
</FrameLayout>
</layout>