<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_brown">

        <LinearLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imgLogo"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:background="@drawable/coffee"
                android:contentDescription="@string/coffee" />

            <EditText
                android:textSize="30sp"
                android:id="@+id/txtUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/user_name"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <EditText
                android:textSize="30sp"
                android:id="@+id/txtPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="Autofill" />


            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="#1DDDF7"
                android:textColor="#fff"
                android:text="@string/login"
                android:textSize="20sp" />

        </LinearLayout>
    </FrameLayout>
</layout>